68SC: Added more content and pics.

--- a/index.html
+++ b/index.html
@@ -8,8 +8,32 @@
 <link rel="stylesheet" href="styles.css">
 <body>
   <div class="wrapper">
-    <h1>Welcome to 68 SC For Sale</h1>
-    <p>This is a basic HTML5 page.</p>
+    <h1>For Sale</h1>
+    <h2>1968 Volkswagen Single Cab</h2>
+    <h3>Asking Price: <span>$25,000</span></h3>
+    <p>Clean title in hand. The truck is currently on non-op status.</p>
+    <p>Located in San Jose, CA.</p>
+    <hr>
+    <p>It's tough to let go, but this beauty deserves to be on the road, not just sitting in the driveway. It's time for a new owner to make it the show truck it's meant to be!</p>
+
+    <p>Contact me for more details or to schedule a viewing.</p>
+
+    <p>For more pictures and build story, <a href="https://www.facebook.com/people/G%C3%BCnter/100093053463798/">please visit FB page dedicated to this truck.</a></p>
+
+    <div class="image-grid">
+      <a href="https://www.facebook.com/photo.php?fbid=692329643878812&set=a.102563249522124&type=3" target="_blank">
+        <img src="https://scontent-sjc6-1.xx.fbcdn.net/v/t39.30808-6/548178792_692330180545425_2820549384915336563_n.jpg?stp=cp6_dst-jpg_tt6&_nc_cat=107&ccb=1-7&_nc_sid=833d8c&_nc_ohc=4i8LfjxSuLAQ7kNvwHkKc0B&_nc_oc=AdkF57d7BlcBfqBo3SA--K-wD1eE67XOoxtrSbLguFGMyYNbfZckmVCbkjImhS8tz7k&_nc_zt=23&_nc_ht=scontent-sjc6-1.xx&_nc_gid=gI_ArXUI-yMv5rfRVB9oKg&oh=00_AfY5ns1yQzwvo2CUR-9Pp6MpocI2lxKqNBGe8hl45QwC0A&oe=68CFA979" alt="Truck Front View">
+      </a>
+      <a href="https://www.facebook.com/photo.php?fbid=598118536633257&set=a.102563249522124&type=3" target="_blank">
+        <img src="https://scontent-sjc3-1.xx.fbcdn.net/v/t39.30808-6/499148442_598119029966541_8864380651185690415_n.jpg?stp=cp6_dst-jpg_tt6&_nc_cat=102&ccb=1-7&_nc_sid=833d8c&_nc_ohc=HUO2FDfP9ZsQ7kNvwEZBIti&_nc_oc=Adk3oc16Q0eny3Aly8_OMZJuDCuGYv1WhGpW9g4o4ipe7pnHCiDKBQ7rxjE6rpddO_M&_nc_zt=23&_nc_ht=scontent-sjc3-1.xx&_nc_gid=JEgzlHoVbylArioqFjc3dg&oh=00_AfbErUxqcZFmTISwncoSul5xA7g-z-CPyIlVGzadG32IeQ&oe=68CFAE72" alt="Truck Side View">
+      </a>
+      <a href="https://www.facebook.com/permalink.php?story_fbid=pfbid02M17dHN8ceGTecqv2jSZ9eQxgXdjmsKkeke7uwaMKyWiFuiZwv3gjs9ZB31xjvBE8l&id=100093053463798" target="_blank">
+        <img src="https://scontent-sjc6-1.xx.fbcdn.net/v/t39.30808-6/505503320_613545615090549_2342917218336890572_n.jpg?stp=cp6_dst-jpg_tt6&_nc_cat=101&ccb=1-7&_nc_sid=833d8c&_nc_ohc=odOafbV444MQ7kNvwGdeJNa&_nc_oc=AdlNk6gZ3qJRdrUoNXnFpPfFdH_J8GGeLvZEtVHLUUddhJ3645o728jOYsKTQt9copU&_nc_zt=23&_nc_ht=scontent-sjc6-1.xx&_nc_gid=UhGu6pCxNVNjIi-3XUvwVw&oh=00_AfZASG7QxfJC-fSgvnGKJhNJXFahJLL58cUW6d5OkPndmg&oe=68CFBBF3" alt="Truck Rear View">
+      </a>
+      <a href="https://www.facebook.com/photo.php?fbid=598118493299928&set=a.102563249522124&type=3" target="_blank">
+        <img src="https://scontent-sjc6-1.xx.fbcdn.net/v/t39.30808-6/498697352_598119003299877_1154563703999065460_n.jpg?stp=cp6_dst-jpg_tt6&_nc_cat=109&ccb=1-7&_nc_sid=833d8c&_nc_ohc=XcPB6CTIYtMQ7kNvwFOgMtB&_nc_oc=AdleyC9cxi6i_Qw2A2R2-ugfnvkmTPi00_EsbPHEwlhoWyq_zc_5k_BfsYjhVsAvF08&_nc_zt=23&_nc_ht=scontent-sjc6-1.xx&_nc_gid=U0vJrlhjhegmlAbH3rh7aw&oh=00_AfbJHutpYlHhq_vdcr8FFhTBa40FAn5Xj2uznktNl1oUjQ&oe=68CFA74F" alt="Truck Interior">
+      </a>
+    </div>
   </div>
 </body>
 </html>
