68SC: Added Google Analytics.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-QMKY253BXS"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-QMKY253BXS');
+  </script>
+  
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>68 SC For Sale</title>
@@ -16,9 +26,9 @@
     <hr>
     <p>It's tough to let go, but this beauty deserves to be on the road, not just sitting in the driveway. It's time for a new owner to make it the show truck it's meant to be!</p>
 
-    <p>Contact me for more details or to schedule a viewing.</p>
+    <p><a href="mailto:misharev@gmail.com">Contact me</a> for more details or to schedule a viewing.</p>
 
-    <p>For more pictures and build story, <a href="https://www.facebook.com/people/G%C3%BCnter/100093053463798/">please visit FB page dedicated to this truck.</a></p>
+    <p>For more pictures and build story, <a href="https://www.facebook.com/people/G%C3%BCnter/100093053463798/" target="_blank">please visit FB page dedicated to this truck.</a></p>
 
     <div class="image-grid">
       <a href="https://www.facebook.com/photo.php?fbid=692329643878812&set=a.102563249522124&type=3" target="_blank">
